Added multipoint shooting to fix, fixed issues with finding all four legs of X-points in man, added BR BZ BPHI as outputs in foot, modified d3dplot to allow for colors, be able to plot fixed points, and pull all manifold files from a given directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,26 @@
 blitz++/blitz-0.9
 *.d
+*.o# macOS
+.DS_Store
+
+# python / editors
+.venv/
+.vscode/
+
+# build artifacts
+build/
 *.o
+*.a
+*.so
+*.dylib
+*.mod
+
+# logs & data outputs
+*.dat
+*_Test*.dat
+log_*.dat
+plot*.dat
+_plot.dat
+
+# backups
+*.back
